8334711: [TEST_BUG] Compilation failed of MimeFormatsTest/MimeFormatsTest.java
Reviewed-by: yan